k8s/deploy_app.yaml
apiVersion: apps/v1 
kind: Deployment  
metadata: 
  name: flask-app-deployment
spec: 
  selector:
    matchLabels:
      app: flask-app
  replicas: 1 
  template:
     metadata: 
      labels:
        app: flask-app
     spec: 
      containers:
      - name: flask-app
        image: oscarmontes/contenedores:flask-app
        ports:
        - containerPort: 5000
