k8s/nodeport_app.yaml
apiVersion: v1
kind: Service
metadata:
 name: app1
 labels:
    app: flask-app
spec:
 type: NodePort
 selector:
  app: flask-app
 ports:
 - protocol: TCP
   port: 5000
   targetPort: 5000
   nodePort: 30082
